added Intro and method

--- a/Heart Disease Data Project.ipynb
+++ b/Heart Disease Data Project.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "02be98e1-8289-4977-aef5-6543c9d8db85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "id": "8a4f50a0-1f7e-4fe4-8859-1bc6b533d9cd",
    "metadata": {},
@@ -45,7 +37,11 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
+      "\n",
+      "Registered S3 method overwritten by 'GGally':\n",
+      "  method from   \n",
+      "  +.gg   ggplot2\n",
       "\n"
      ]
     }
@@ -54,13 +50,75 @@
     "#Libraries for classifying and modeling data\n",
     "library(tidyverse)\n",
     "library(tidymodels)\n",
+    "library(GGally)\n",
+    "library(broom)\n",
     "library(repr)\n",
     "options(repr.matrix.max.rows = 6)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb028931-9284-45ac-886a-8fc1763d48ba",
+   "metadata": {},
+   "source": [
+    "# **Determine heart disease patients from Cleveland based on age, blood pressure, cholestorol, maximum heart rate, and ST depression.**\n",
+    "\n",
+    "### Vedant Kalyani, Dylan Tan, Audrey Zeilstra, Kevin Zhu\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c65cae3-ab1f-4d64-9ba3-d0cd5c6980d9",
+   "metadata": {},
+   "source": [
+    "### Introduction\n",
+    "\n",
+    "Heart disease is a major health issue that affects millions of people worldwide. There are many factors that increase the risk of heart disease, including age, cholestorol, heart rate and so on.\n",
+    "\n",
+    "For example, low heart rate may cause frequent failing, inability of the heart to pump enough blood (heart failure), sudden cardiac arrest or sudden death. The goal of the project is to predict whether a patient is likely to have heart disease based on these risk factors.\n",
+    "\n",
+    "The question we will Try to answer is: **Is a patient likely to have heart disease, based on measurement and analysis of age, blood pressure, cholesterol, maximum heart rate, and ST depression?**\n",
+    "\n",
+    "We are using the processed.cleveland.data from the Heart Disease Database as the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b666115-6b40-4418-9b29-783d9de8b88d",
+   "metadata": {},
+   "source": [
+    "### Method\n",
+    "\n",
+    "We are using the processed.cleveland.data from the Heart Disease Database as the dataset. Our goal of the project is to predict if a patient from Cleveland will have heart disease based on predictors. We give names to each columns using calnames(). The predictors are selected from the following columns:\n",
+    "\n",
+    "1. **Age**: patient’s age\n",
+    "2. **Sex**: sex (1 = male, 0 = female)\n",
+    "3. **Type_Chest_Pain**: chest pain type\n",
+    "4. **Resting_Blood_Pressure**: resting blood pressure\n",
+    "5. **Cholestorol**: serum cholestoral in mg/dl\n",
+    "6. **Fasting_Blood_Sugar**: fasting blood sugar > 120 mg/dl? (1 = True, 0 = False)\n",
+    "7. **Resting_ECG_Results**: resting electrocardiographic results\n",
+    "8. **Max_Heart_Rate**: maximum heart rate achieved\n",
+    "9. **Exercise_Angina**: whether exercise induced angina (1 = True, 0 = False)\n",
+    "10. **ST_Depression_Exercise**: ST depression induced by exercise, relative to rest\n",
+    "11. **Slope**: the slope of the peak exercise ST segment (1 = upslope, 2 = flat, 3 = downslope)\n",
+    "12. **Major_Vessels**: number of major vessels (0-3) colored by flourosopy\n",
+    "13. **Thalassemia**: (3 = normal, 6 = fixed defect, 7 = reversable defect)\n",
+    "14. **Diagnosis**: diagnosis of heart disease\n",
+    "\n",
+    "We first clean the data. In the original dataset, it use integers in column **num** to represent diagnosis of heart disease, but we just need to determine whether or not a patient has heart disease. Therefore, we use **mutate** to create a new column **Diagnosis**, and divided it into two cases, which are “Positive” and “Negative”.\n",
+    "\n",
+    "Then. We used **initial_split()** to split the dataframe into 75% training and 25% testing data, stratifying for **Diagnosis**. The training set is what we will use for analysis.\n",
+    "\n",
+    "To summarize our data, we grouped by **Diagnosis** then summarized for the mean of five columns:  **Age, Resting_Blood_Pressure, Cholestorol, Max_Heart_Rate, and ST_Depression_Exercise**. We found that the patient with “Positive” diagnosis have a relatively higher age, resting blood pressure, and cholestorol, and lower max heart rate. It is not hard to see the difference between values, and we can analysis and try to find classification of the plot based on it.\n",
+    "\n",
+    "To visualize relationships for the dataframe, we generated scatter plots of two different columns of value against each other. Based on the plots we create, we can determine which are the best predictor to use. We colored the scatter plot point based on **Diagnosis**, it clearly shows the “Positive” and “Negative” diagnosis based on two variables. The plots are shown, we may not use **figure 1.3, 1.4, and 1.5**, because the dots are mix together, and it’s hard to tell the distinct distribution. **Figure 1.1 and 1.2**, have more distinct distribution, which may be what we want for the project.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c350d87e-2d68-4b27-88f8-a26fe86995bf",
    "metadata": {},
    "outputs": [
@@ -185,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "42138858-d425-4d3f-b4ef-6cf0f2cb35e3",
    "metadata": {},
    "outputs": [
@@ -277,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b9ed656c-ed44-4bd5-8f76-10b4066fafa2",
    "metadata": {},
    "outputs": [
@@ -340,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4b47c293-464f-45de-9a35-16382d871b56",
    "metadata": {},
    "outputs": [
