--- a/Heart Disease Data Project.ipynb
+++ b/Heart Disease Data Project.ipynb
@@ -146,7 +146,7 @@
    "source": [
     "### Method\n",
     "\n",
-    "We are using the processed.cleveland.data from the Heart Disease Database as the dataset. Our goal of the project is to predict if a patient from Cleveland will have heart disease based on predictors. We give names to each columns using calnames(). The predictors are selected from the following columns:\n",
+    "We are using the processed.cleveland.data from the Heart Disease Database as the dataset. Our goal of the project is to predict if a patient from Cleveland will have heart disease based on predictors. We give names to each columns using colnames(). The predictors are selected from the following columns:\n",
     "\n",
     "1. **Age**: patient’s age\n",
     "2. **Sex**: sex (1 = male, 0 = female)\n",
@@ -802,9 +802,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4cb0d2ea-f1f6-4c23-afed-59d432d35672",
+   "metadata": {},
+   "source": [
+    "### References:\n",
+    "\n",
+    "For our project, in addition to our chosen dataset, we used two sources to do some background research. These sources can be found below:\n",
+    "\n",
+    "“Know Your Risk for Heart Disease.” Centers for Disease Control and Prevention, Centers for Disease Control and Prevention, 21 Mar. 2023, www.cdc.gov/heartdisease/risk_factors.htm#:~:text=Eating%20a%20diet%20high%20in,can%20lead%20to%20heart%20disease. \n",
+    "\n",
+    "“Processed.cleveland.data.” archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.cleveland.data. \n",
+    "\n",
+    "Rawat, Shubhankar. “Heart Disease Prediction.” Medium, Towards Data Science, 28 June 2021, towardsdatascience.com/heart-disease-prediction-73468d630cfc. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4362ae9-067e-4aad-9fcc-538b6bc3813f",
+   "id": "2d37f52c-62df-47b5-a56a-b6c7af97f81d",
    "metadata": {},
    "outputs": [],
    "source": []
