Added description for major vessels and thalassemia graphs

--- a/Heart Disease Data Project.ipynb
+++ b/Heart Disease Data Project.ipynb
@@ -665,7 +665,7 @@
    "id": "d183b60b-a7f8-4c75-b15b-62ef1ac6c540",
    "metadata": {},
    "source": [
-    "All four of the plots above are made based on the target variable. They illustrate a clear distinction in their correlation. "
+    "The two graphs show the relationship between the diagnosis of heart disease and the presence of major vessels and thalassemia. In the graph related to major vessels, it appears that patients with a higher number of major vessels have a higher likelihood of having heart disease. In the thalassemia graph, it seems that the absence of thalassemia is more strongly associated with heart disease than its presence."
    ]
   },
   {
